--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@maptiler/sdk": "^3.10.2",
+    "i18next": "^25.8.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "next-i18next": "^15.4.3",
+    "primereact": "^10.9.7",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-i18next": "^16.5.3",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
