--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@maptiler/sdk": "^3.10.2",
+    "axios": "^1.13.4",
     "i18next": "^25.8.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
